// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobAdded /> render correctly with New annotation 1`] = `
.c0 {
  color: #4256ef;
  background-color: #d9ddfc;
  padding: 4px 7px;
  border-radius: 16px;
  margin-left: 20px;
  white-space: nowrap;
  font-weight: 400;
  vertical-align: bottom;
  font-size: 12px;
}

@media (max-width:1020px) {
  .c0 {
    margin-left: auto;
  }
}

<span
  class="c0"
>
  New
</span>
`;

exports[`<JobAdded /> render correctly with notify 5d ago 1`] = `
.c0 {
  color: #37474f;
  border: 1px solid #e0e0e0;
  background-color: #fff;
  display: inline-block;
  margin-left: 6px;
  border-radius: 16px;
  text-transform: lowercase;
  white-space: nowrap;
  padding: 4px 7px;
  text-overflow: ellipsis;
  overflow: hidden;
  min-width: 1ch;
}

@media (max-width:1020px) {
  .c0 {
    margin-left: auto;
  }
}

<span
  class="c0"
>
  5d ago
</span>
`;
